fix header active marker overflowing

--- a/src/components/menu/style.module.css
+++ b/src/components/menu/style.module.css
@@ -1,7 +1,6 @@
 .menu {
-  position: absolute;
-  left: 200px;
-  right: 0;
+  overflow: hidden;
+  margin: 0;
 }
 
 .main {
